# types_remover

./: README.md  _types_remover_ast.py  pyproject.toml  types_remover.py  types_remover_if.py
.github/workflows/: release.yml
src/types_remover/: __init__.py  _types_remover_ast.py  _types_remover_if.py  cli.py
